# freelancer-marketplace

./: .gitignore  AI_SECURITY_CLASSIFIER_README.md  AI_SECURITY_IMPLEMENTATION.md  DOCKER_CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  alembic.ini  docker-compose.yml  run_dast_locally.ps1  run_dast_locally.py  s3-iam-policy.json  test_security_api.py
backend/: .coveragerc  .dockerignore  .env  .env.example  .env.local  CI_TEST_FIXES.md  DATABASE_SETUP_GUIDE.md  Dockerfile  INTEGRATION_TESTING.md  MIGRATION_CHANGES.md  MONOLITH_MIGRATION_COMPLETE_GUIDE.md  README.md  SAST_Executive_Summary.txt  SAST_Security_Report.md  START_PROJECT.md  coverage.xml  debug_login.py  docker-build.ps1  docker-build.sh  generate_100_orders.py  generate_50_users.py  generate_inbox_messages.py  generate_payments.py  generate_reviews.py  generate_users.py  generated_inbox_messages.txt  generated_orders.txt  generated_payments.txt  generated_reviews.txt  generated_users_credentials.txt  init_db.py  pyproject.toml  pytest.ini  quick_integration_test.py  requirements.txt  run_dast.py  run_integration_tests.bat  run_integration_tests.ps1  run_integration_tests.py  run_sast.py  (+17 more)
backend/app/: config.py  dependencies.py  main.py  router.py  routes.py
backend/app/database/: session.py
backend/app/models/: models.py
backend/app/routes/: __init__.py  auth.py  notification.py  profile.py  review.py  security.py
backend/app/schemas/: schemas.py
backend/app/services/: admin_service.py  auth_service.py  customer_service.py  (+4 more)
backend/tests/: conftest.py  test_admin_service.py  test_coverage_boost.py  test_customer_service.py  test_deployed_api.py  test_direct_functions.py  test_final_coverage.py  test_imports_and_modules.py  test_model_validation.py  test_profile_routes.py  test_provider_service.py  test_push_80_percent.py  test_route_basics.py  test_security_classifier.py  test_utility_functions.py
(+95 files in other folders)
